--- a/VantageJS/package.json
+++ b/VantageJS/package.json
@@ -6,5 +6,11 @@
   "author": {
     "name": "wilsoadmin",
     "email": ""
+  },
+  "dependencies": {
+    "moment": "^2.14.1",
+    "promise": "^7.1.1",
+    "serialport": "^4.0.1",
+    "socket.io": "^1.4.8"
   }
 }
