standarize class names chg wakeup

--- a/VantageJS/package.json
+++ b/VantageJS/package.json
@@ -8,10 +8,14 @@
     "email": "kwilson@1.com"
   },
   "dependencies": {
-    "linq": "^3.0.5",
-    "moment": "^2.14.1",
-    "promise": "^7.1.1",
-    "serialport": "^4.0.1",
-    "socket.io": "^1.4.8"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "linq": "^3.0.8",
+    "mail": "^0.2.3",
+    "moment": "^2.18.1",
+    "promise": "^7.3.1",
+    "serialport": "^4.0.7",
+    "socket.io": "^1.7.4",
+    "socket.io-client": "^2.0.3"
   }
 }
