--- a/VantageJS/package.json
+++ b/VantageJS/package.json
@@ -13,9 +13,11 @@
     "linq": "^3.0.8",
     "mail": "^0.2.3",
     "moment": "^2.18.1",
+    "mongodb": "^2.2.9",
     "promise": "^7.3.1",
     "serialport": "^4.0.7",
     "socket.io": "^1.7.4",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "winston": "^2.3.1"
   }
 }
