--- a/VantageJS/package.json
+++ b/VantageJS/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
+    "emailjs": "^1.0.12",
     "events": "^1.1.1",
     "express": "^4.15.3",
     "linq": "^3.0.8",
-    "mail": "^0.2.3",
     "moment": "^2.18.1",
     "mongodb": "^2.2.9",
     "promise": "^7.3.1",
