--- a/VantageLib/package.json
+++ b/VantageLib/package.json
@@ -10,6 +10,12 @@
     "@types/node": "^8.0.14"
   },
   "dependencies": {
-    "moment": "^2.24.0"
+    "linq": "^3.1.1",
+    "moment": "^2.24.0",
+    "mongodb": "^2.2.9",
+    "serialport": "^7.1.4",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "winston": "^2.4.4"
   }
 }
