--- a/VantageApp/package.json
+++ b/VantageApp/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^8.0.14"
   },
   "dependencies": {
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "ws": "^6.2.1"
   }
 }
